# amdapy

./: .gitignore  README.md  amda.py  data_check.py  ddtime.py  editor.py  getparameter_imf_35b6786739efcdc5a74ab1dca29d3b6b_19970902T000012_19970902T010012.txt  getparameter_imf_gsm_35b6786739efcdc5a74ab1dca29d3b6b_19970902T000012_19970902T010012.txt  getparameter_imf_mag_35b6786739efcdc5a74ab1dca29d3b6b_19970902T000012_19970902T010012.txt  http_index.py  pds.py  pdsdump.py  requirements.txt  setup.cfg  spase.py  str_utils.py  vidata.py  viview.py
amdaWSClient/: .client.py.swp  client.py  obstree.py
amdapy/: __init__.py  amda.py  ddtime.py  doxygen.config  http_index.py  session.py  spase.py  vidata.py  viview.py
amdapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
amdapy/amdaWSClient/: client.py  obstree.py
amdapy/core/: collection.py  dataset.py  parameter.py  timespan.py  variable.py
amdapy/docs/: README.md  amdapy.rst  conf.py  index.rst
amdapy/provider/: pdsdump.py
amdapy/rest/: client.py  obstree.py  version.py
amdapy/scripts/: ace_swepam_stea.py  helios1_idist.py  helios_dists.py  iter_amda_datasets.py
amdapy/tk/: objectselect_test.py  ui1.py
amdapy/utils/: csv.py  session.py  str_utils.py
core/: dataset.py  provider.py  variable.py
docs/: amdapy.rst  conf.py  example1.py  index.rst
docs/tex/: amdapy_doc.aux  amdapy_doc.tex
doxygen/html/: annotated.html  classamdapy_1_1ddtime_1_1DDTime-members.html  classamdapy_1_1ddtime_1_1DDTime.html  classamdapy_1_1editor_1_1Editor_1_1UserInput.html  classamdapy_1_1editor_1_1Editor__inherit__graph.map  classamdapy_1_1editor_1_1Editor__inherit__graph.md5  classamdapy_1_1editor_1_1InstrumentEditor-members.html  classamdapy_1_1editor_1_1InstrumentEditor__coll__graph.map  classamdapy_1_1editor_1_1InstrumentEditor__coll__graph.md5  classamdapy_1_1editor_1_1NumericalDataEditor-members.html  classamdapy_1_1editor_1_1NumericalDataEditor.html  classamdapy_1_1editor_1_1NumericalDataEditor__coll__graph.map  classamdapy_1_1pds_1_1PDSAttribute-members.html  classamdapy_1_1pds_1_1PDSAttribute__coll__graph.map  data__check_8py.html  (+58 more)
examples/: batch_mode.py  dataset_description.py  simple_plot.py  user_parameters.py
notebooks/: getparameter_imf_35b6786739efcdc5a74ab1dca29d3b6b_20080101T000000_20080101T200000.txt  getparameter_imf_mag_35b6786739efcdc5a74ab1dca29d3b6b_20080101T000000_20080101T200000.txt  notebook_1.ipynb  notebook_2.ipynb  obstree.xml
scripts/: helios_dists.py  iter_amda_datasets.py
tests/: ML_GTL_IsSOR_AL_cat_0.txt  test_1.py  test_derived.py  test_doc.py  test_get_dataset.py  test_mission_descriptions.py  test_ml1.py  test_plot.py  test_stea_swepam_epa.py  test_velocity.py  tests_bug_1_batchmodefail.py
tk/: ui2.py
(+240 files in other folders)
