[metadata]
name = amdapy
version = 1
author = Alexandre Schulz, Benjamin Renard
author_email = alexandre.schulz@irap.omp.eu, benjamin.renard@irap.omp.eu
url = https://gitlab.irap.omp.eu/aschulz/amdapy
description = AMDA python package
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENSE
platform = any
keywords = amda,plasmas,cdpp,irap
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: End Users/Desktop
    Environment :: Console
    Environment :: Web Environment
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.5

setup_requires =
    setuptools >=38.3

install_requires =
    requests >=2.22

package_dir =
    . = .
packages = find:
